Add tabs layout with icons

--- a/TennisTime/app/src/main/res/values/strings.xml
+++ b/TennisTime/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">TennisTime</string>
+    <string name="player">player</string>
+    <string name="match">match</string>
+    <string name="search">search</string>
+
 </resources>
