--- a/TennisTime/app/src/main/res/values/strings.xml
+++ b/TennisTime/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="player">player</string>
     <string name="match">match</string>
     <string name="search">search</string>
+    <string name="available">available</string>
+    <string name="contact">contact</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
