Update layout PlayerContact

--- a/TennisTime/app/src/main/res/values/strings.xml
+++ b/TennisTime/app/src/main/res/values/strings.xml
@@ -8,5 +8,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="name">name</string>
+    <string name="phone">phone</string>
+    <string name="mail">mail</string>
+    <string name="tennisclub">tennisclub</string>
+    <string name="vtvnumber">vtv_number</string>
+    <string name="ranking">ranking</string>
 
 </resources>
