--- a/TennisTime/app/src/main/res/values-nl-rBE/strings.xml
+++ b/TennisTime/app/src/main/res/values-nl-rBE/strings.xml
@@ -15,4 +15,5 @@
     <string name="call">bellen</string>
     <string name="tennisclubIDs">tennisclub IDs</string>
     <string name="tennisclubID">tennisclub ID</string>
+    <string name="id">id:</string>
 </resources>
